# agent-start

./: .env.example  README.md  pyproject.toml
src/ch1/: client.py  main.py  system_prompt.txt  tools.py  util.py
src/ch2/: agentPlanSolve.py  agentReAct.py  agentReflection.py  client.py  executor.py  tools.py
src/ch2/prompts/: promptReAct.txt
src/ch3/: autogen_output.py  autogen_software_team.py  camel_book_write.py  langgraph_demo.py
